clean code and remove unused files